# motionflow

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  setup_motionflow.sh  start_motionflow.sh
config/: schema.py  settings.yaml  yolo11lpose-coco-tracker.yaml
core/: actions.py  engine.py  events.py  filters.py  frame_broadcaster.py  models.py  mqtt.py  visualization.py
doc/: README_joshua_orange_pi_setup.md
systemd/: install.sh  motionflow-webui.service  motionflow.service
tests/: __init__.py  conftest.py  run_inference.py  test_actions_unit.py  test_config.py  test_events_debounce.py  test_events_unit.py  test_filters.py  test_models.py  test_system.py
web_ui/: app.py
web_ui/static/js/: app.js  config.js  renderer.js
web_ui/templates/: index.html  live.html
